Fix background color token in onContrast example

--- a/examples/bpk-component-skeleton/examples.module.scss
+++ b/examples/bpk-component-skeleton/examples.module.scss
@@ -62,5 +62,5 @@
 
 .bpk-background-style-on-contrast {
   padding: tokens.bpk-spacing-base();
-  background-color: tokens.$bpk-canvas-contrast-day;
+  background-color: tokens.$bpk-surface-contrast-day;
 }
